# learning

./: .gitignore  pyproject.toml
.zed/: settings.json
01 - Divine Registration/Unity - Donkey Kong/ProjectSettings/: ProjectSettings.asset
01 - Divine Registration/Unity - Game of Life/Assets/Scenes/: Game of Life.unity
01 - Divine Registration/Unity - Game of Life/Assets/Scripts/: GameBoard.cs  Pattern.cs
01 - Divine Registration/Unity - Game of Life/Assets/Tiles/: Alive.asset  Palette.prefab
01 - Divine Registration/Unity - Game of Life/ProjectSettings/: EditorBuildSettings.asset  ProjectSettings.asset
01 - Divine Registration/rustlings/: .rustlings-state.txt
01 - Divine Registration/rustlings/exercises/01_variables/: variables3.rs  variables6.rs
01 - Divine Registration/rustlings/exercises/02_functions/: functions2.rs
01 - Divine Registration/rustlings/exercises/03_if/: if1.rs
01 - Divine Registration/rustlings/exercises/04_primitive_types/: primitive_types2.rs  primitive_types3.rs  primitive_types4.rs
01 - Divine Registration/rustlings/exercises/05_vecs/: vecs2.rs
01 - Divine Registration/rustlings/exercises/06_move_semantics/: move_semantics1.rs  move_semantics2.rs
01 - Divine Registration/rustlings/exercises/quizzes/: quiz1.rs
01 - Divine Registration/rustlings/solutions/01_variables/: variables5.rs
01 - Divine Registration/rustlings/solutions/03_if/: if1.rs
01 - Divine Registration/toys/ml/mnist_cnn/: README.md  fenn.yaml  inference.py  train.py
01 - Divine Registration/toys/ml/mnist_demo/: main.py
(+29 files in other folders)
